# computer-elea-rust

./: Cargo.toml
assets/test/representation/filesystem/machines/nested-machines-lightswitch/: off.yaml  on.yaml  pattern.yaml
assets/test/representation/filesystem/machines/nested-machines-lightswitch/broken/: fixes.yaml
assets/test/representation/filesystem/machines/nested-machines-lightswitch/pattern/fade/: levels.yaml
assets/test/representation/filesystem/machines/nested-machines-lightswitch/pattern/strobe/: speeds.yaml
src/: lib.rs
src/define/: mod.rs
src/define/experience/representation/: filesystem.rs  mod.rs  rust_minimal.rs  rust_pragmatic.rs
tests/: README.md  common.rs  test.rs
tests/define/: mod.rs
tests/define/experience/: mod.rs
tests/define/experience/representation/: filesystem.rs
